--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-app",
+  "homepage" : ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +46,7 @@
   "devDependencies": {
     "@mate-academy/eslint-config-react": "0.0.5",
     "eslint": "^7.13.0",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.0.0"
   }
 }
